# packaging-publishing-ir353

./: .gitignore  pyproject.toml  requirements2.txt
src/cancer_prediction_ir353/scripts/: app.py
tests/: test_cancer_model.py
